democracy/desktop/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: democracy-desktop
  name: democracy-desktop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: democracy-desktop
